<resources>
    <string name="app_name">netguru_rec_task</string>
    <string name="create_new_shopping_list">Create new shopping list</string>
    <string name="shoppingList">Shopping List</string>
    <string name="onion">Onion</string>
    <string name="quantity_10">10</string>
    <string name="completed">Completed</string>
    <string name="delete_items">Delete items</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="archive_item">Archive item</string>
    <string name="archived">Archived</string>
    <string name="groceries_done">Groceries done %1$d/%2$d</string>
    <string name="sample_list">Sample list</string>
</resources>